# rootlens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json.example
.claude/agents/: compliance-reviewer.md  quality-reviewer.md  spec-reviewer.md
.claude/skills/commit/: SKILL.md
.claude/skills/optimize/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test-expand/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: dataset.json  evaluate.py  guard.py
blog/: your-ci-system-is-lying-to-you.md
configs/: error_patterns.yaml
docs/: decision-model.md  q1_5_rules.md
examples/: demo.py
scripts/: auto-review-and-push.sh
src/: __init__.py
src/engine/: classifier.py  decision.py  pipeline.py  q1_5.py
src/rootlens/: __init__.py  classifier.py  models.py  q1_5.py
tests/: conftest.py  test_classifier.py  test_decision.py  test_models.py  test_pipeline.py  test_q1_5.py  test_q1_5_extended.py
